<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/activity_main"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context="pl.appsprojekt.systemsecurityii.ui.activity.MainActivity">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<Button
			android:id="@+id/prover_btn"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/prover"/>

		<Button
			android:id="@+id/verifier_btn"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/verifier"/>
	</LinearLayout>

	<Button
		android:id="@+id/generate_world_btn"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/generate_world"
		android:visibility="gone"
		tools:visibility="visible"/>

	<Button
		android:id="@+id/set_world"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/set_world"
		android:visibility="gone"
		tools:visibility="visible"/>

	<Button
		android:id="@+id/set_x"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/set_x"
		android:visibility="gone"
		tools:visibility="visible"/>

	<Button
		android:id="@+id/send_x"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/send_x"
		android:visibility="gone"
		tools:visibility="visible"/>

	<Button
		android:id="@+id/send_c"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/send_c"
		android:visibility="gone"
		tools:visibility="visible"/>

	<Button
		android:id="@+id/insert_c"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/insert_c"
		android:visibility="gone"
		tools:visibility="visible"/>

	<Button
		android:id="@+id/send_s"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/send_s"
		android:visibility="gone"
		tools:visibility="visible"/>

	<Button
		android:id="@+id/verify"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/verify"
		android:visibility="gone"
		tools:visibility="visible"/>
</LinearLayout>
